Bug 358036 - local path for documentation data is not created by default
Summary: local path for documentation data is not created by default
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-15 17:07 UTC by Sven Brauch
Modified: 2016-01-16 13:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Brauch 2016-01-15 17:07:30 UTC
... and thus is not displayed in the respective config dialog properly, since it is not found by QStandardPaths.
Comment 1 Sven Brauch 2016-01-16 13:00:48 UTC
Git commit 9b575f8a5dcb261983eddbe369500b806bf9e655 by Sven Brauch.
Committed on 16/01/2016 at 13:00.
Pushed by brauch into branch 'master'.

Fix path in docfile KCM

QStandardPaths porting bug, I'm still amazed that the previous
code even compiled.

M  +2    -2    docfilekcm/docfilemanagerwidget.cpp

http://commits.kde.org/kdev-python/9b575f8a5dcb261983eddbe369500b806bf9e655
Comment 2 Sven Brauch 2016-01-16 13:09:05 UTC
Git commit 145472f8338de385bb6640767d212df80863eade by Sven Brauch.
Committed on 16/01/2016 at 13:05.
Pushed by brauch into branch '5.0'.

Fix path in docfile KCM

QStandardPaths porting bug, I'm still amazed that the previous
code even compiled.

M  +2    -2    docfilekcm/docfilemanagerwidget.cpp

http://commits.kde.org/kdev-python/145472f8338de385bb6640767d212df80863eade