Fix path in docfile KCM

QStandardPaths porting bug, I'm still amazed that the previous
code even compiled.

BUG:358036